--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,5 +3,5 @@ app:
   port: 9089            # 本机端口
 
 stream:
-  pull_base_url: "http://YOUR_IP_ADDRESS:8080"    # 拉流地址
-  push_base_url: "rtmp://YOUR_IP_ADDRESS/live" # 推流地址
+  pull_base_url: "http://YOUR_STREAM_IP_ADDRESS:8080"    # 拉流地址
+  push_base_url: "rtmp://YOUR_STREAM_IP_ADDRESS/live" # 推流地址
